# Question-Bank-Creator

./: .gitignore  Appeal for help.md  Appeal for help.odt  CONTRIBUTING.md  Cargo.toml  LICENSE.md  Q&A.md  README.md  Text of Architecture questions answer.txt  variable struct data
src/: lib.rs  main.rs  scratch.rs
src/qbnk_data/banks/: Automotive Repair.bnk  Lions!.bnk  Literal Numbers.bnk  Math Questions.bnk  Snow Tracks.bnk  Starlight and Time Cosmology.bnk
src/qbnk_data/banks/archive/: allthewayhome  hadroastbeef.bnk  onefish  stayedhome.bnk  thislittlepiggy.bnk  twofish  wenttomarket.bnk  wentweeweewee.bnk
src/qbnk_data/lists/: Bibleplaces.lst  abcde.lst  alphabet.lst  birds  candies  char.qwert.lst  empty.lst  endalpha.lst  firstnames.lst  floats1.lst  floats2.lst  floats3.lst  ints1.12.123.lst  ints1.lst  ints2.lst  jdr.lst  presidents.lst  qwe.lst  seqwrds_capped.lst  seqwrds_lower.lst  str.birds.lst  str.dirt_rodents.lst  teachers.lst  yui.lst  zxc.lst
src/qbnk_data/variables/: -1000000..1000000.vrbl  firstnames.vrbl  float.-0.77..0.77.vrbl  float.01...99.vrbl  frst-fth_txt_lwrcse.vrbl  int.-32..32.vrbl  int.-9..9.vrbl  int.-99..99.vrbl  int.45..67.vrbl  int.77..888.vrbl  int1..9.vrbl  int100000..200000.vrbl  int101..999.vrbl  lttrs.vrbl  presidents
