[package]
name = "qbnk_rbld5"
version = "0.1.0"
edition = "2021"

description = "Question Bank Creator.  This program is targeted at teachers & homeschool parents and is especially useful for teaching math.  It allows the construction of test/worksheet/quiz questions that contain dynamic content.  The teacher can create variables that generate values/strings using random or pseudo-random criteria set by the user.  Once constructed, the question is stored in a file (or 'question bank') for later access as needed.  Teachers can also make the program/questions available to students for student directed practice."

[dependencies]
#Standard crates
rand = "0.8.5"

# Non-standard crates
num-traits = "0.2.19"
serde_json = "1.0.120"
serde = { version = "1.0.204", features = ["derive"] }
fltk = { version = "^1.5.5", features = ["fltk-bundled"] }

# Reagan created crates
lib_myfltk = { git = "https://github.com/jtreagan/lib_myfltk.git" }
lib_utils = { git = "https://github.com/jtreagan/lib_utils.git" }
lib_file = { git = "https://github.com/jtreagan/lib_file.git" }









