[package]
name = "question_bank_creator"
version = "0.29.9"
authors = ["John T. Reagan"]
license = "GPL-3.0-or-later"
readme = "README.md"
edition = "2021"

documentation = "https://docs.rs/question_bank_creator"

repository = "https://github.com/jtreagan/Question-Bank-Creator/tree/master"

description = "This program is targeted at teachers & homeschool parents and is especially useful for teaching math.  It allows the construction of test/worksheet/quiz questions that contain dynamic content.  The teacher can create variables that generate values/strings using random or pseudo-random criteria set by the user.  Once constructed, the question is stored in a file (or 'question bank') for later access as needed.  Teachers can also make the program/questions available to students for student directed practice."

[dependencies]
#Standard crates
rand = "0.8.5"

# Non-standard crates
num-traits = "0.2.19"
serde_json = "1.0.120"
serde = { version = "1.0.204", features = ["derive"] }
fltk = { version = "^1.5.5", features = ["fltk-bundled"] }

# Reagan created crates
lib_myfltk = "0.1.4"
#lib_myfltk = {path = "/home/jtreagan/programming/mine/lib_myfltk"}
lib_utils = "0.1.3"
lib_file = "0.1.4"












